# evalforge-ai

./: .dockerignore  .gitignore  DEPLOY_HUGGINGFACE.md  Dockerfile  EVALFORGE_NOTEBOOK_MAP.md  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  main.py
app/api/routes/: __init__.py  benchmarks.py  datasets.py  evaluations.py  reports.py
app/core/: config.py
app/dashboard/: __init__.py  components.py  data_loader.py  main.py  styles.py
app/dashboard/pages/: __init__.py  benchmarks.py  dataset_manager.py  eval_runs.py  overview.py  reports.py  settings.py
app/db/: __init__.py  repositories.py  session.py
app/evaluators/: __init__.py  base.py  deepeval_evaluator.py  ragas_evaluator.py
app/llm_providers/: __init__.py  base.py  factory.py  groq_provider.py  ollama_provider.py
app/models/: __init__.py  schemas.py
app/reports/: __init__.py  report_service.py
app/services/: __init__.py  benchmark_service.py  dataset_service.py  evaluation_service.py  experiment_service.py
scripts/: seed_demo.py  start.sh
tests/: conftest.py  test_api.py  test_dashboard_and_reports.py  test_evaluation_service.py  test_evaluators.py  test_persistence.py
