[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalforge"
version = "0.1.0"
description = "EvalForge - AI Evaluation and Optimization Platform for LLM and RAG Applications"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pandas>=2.2",
  "python-multipart>=0.0.9",
  "streamlit>=1.36",
  "plotly>=5.22",
  "langchain>=0.2,<0.3",
  "langchain-community>=0.2,<0.3",
  "langchain-text-splitters>=0.2,<0.3",
  "langchain-openai>=0.1,<0.2",
  "faiss-cpu>=1.8",
  "ollama>=0.3",
  "reportlab>=4.2",
  "ragas>=0.1.13",
  "deepeval>=0.21",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
